--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ endif()
 # Указание источников
 set(OCTET_SOURCES
     src/storage/uuid_generator.cpp
+    src/utils/file_utils.cpp
     src/utils/logger.cpp
     # TODO
 )
