Implemented module for thread-safe file locking
Module `lock_guard` is a more secure and correct implementation of
file locking, which was first implemented in the `file_utils` module.

Module `file_utils` will be modified further: `acquire`/`release`
functions will be removed and other functions for write/append/read
will reuse new `lock_guard` module for more safety.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ endif()
 set(OCTET_SOURCES
     src/storage/uuid_generator.cpp
     src/utils/file_utils.cpp
+    src/utils/lock_guard.cpp
     src/utils/logger.cpp
     # TODO
 )
