--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,8 @@ endif()
 # Указание источников
 set(OCTET_SOURCES
     src/storage/uuid_generator.cpp
+    src/utils/file_lock_guard.cpp
     src/utils/file_utils.cpp
-    src/utils/lock_guard.cpp
     src/utils/logger.cpp
     # TODO
 )
