Implemented testing for JournalManager

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 set(OCTET_TEST_SOURCES
     test_file_lock_guard.cpp
     test_file_utils.cpp
+    test_journal_manager.cpp
     test_uuid_generator.cpp
     testing_utils.hpp
     testing_utils.cpp
