Implemented testing for StorageManager

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,10 +15,10 @@ set(OCTET_TEST_SOURCES
     test_file_lock_guard.cpp
     test_file_utils.cpp
     test_journal_manager.cpp
+    test_storage_manager.cpp
     test_uuid_generator.cpp
     testing_utils.hpp
     testing_utils.cpp
-    # TODO
 )
 
 # Директория сборки для исполняемых тестовых файлов
