Replace Logger module from utils directory
Since Logger module should be accessible to the end user,
we extract it from the utils subdirectory that will be inaccessible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,23 +53,23 @@ endif()
 
 # Указание заголовочных файлов
 set(OCTET_HEADERS
+    include/logger.hpp
     include/storage/journal_manager.hpp
     include/storage/storage_manager.hpp
     include/storage/uuid_generator.hpp
     include/utils/compiler.hpp
     include/utils/file_lock_guard.hpp
     include/utils/file_utils.hpp
-    include/utils/logger.hpp
 )
 
 # Указание источников
 set(OCTET_SOURCES
+    src/logger.cpp
     src/storage/journal_manager.cpp
     src/storage/storage_manager.cpp
     src/storage/uuid_generator.cpp
     src/utils/file_lock_guard.cpp
     src/utils/file_utils.cpp
-    src/utils/logger.cpp
 )
 
 # Для подключения заголовков
