Updating CMakeListst for installing library correctly in the system
Now we can install library in the system and use modules with including:
<octet>, <octet/storage_manager>, <octet/journal_manager>, <octet/logger>,
<octet/uuid_generator>. Other modules are private and will be unavailable
for users.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,19 @@
 cmake_minimum_required(VERSION 3.17 FATAL_ERROR)
 
 # Инициализация проекта
-project(octet LANGUAGES CXX)
-
-# Указание версии проекта
-set(octet_VERSION_MAJOR 0)
-set(octet_VERSION_MINOR 1)
-set(octet_VERSION_PATCH 0)
+project(octet
+    VERSION 0.1.0
+    DESCRIPTION "Octet library for UTF-8 string storage"
+    LANGUAGES CXX
+)
 
 # Настройка стандарта C++17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Подключаем модуль с переменными для стандартных путей установки
+include(GNUInstallDirs)
 
 # TODO: При разработке CLI расскоментировать
 # Поиск необходимых библиотек
@@ -21,8 +23,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Опции сборки
 option(OCTET_BUILD_SHARED_LIB "Build shared version of the library" ON)
 option(OCTET_BUILD_STATIC_LIB "Build static version of the library" OFF)
-option(OCTET_BUILD_APP "Build CLI executable" ON)
 option(OCTET_BUILD_TESTS "Build tests" OFF)
+
+# TODO: При разработке CLI расскоментировать
+# option(OCTET_BUILD_APP "Build CLI executable" ON)
 
 # Определение платформы
 add_library(octet_platform INTERFACE)
@@ -51,18 +55,22 @@ if(NOT (OCTET_BUILD_SHARED_LIB OR OCTET_BUILD_STATIC_LIB))
     message(FATAL_ERROR "At least one of BUILD_STATIC_LIB or BUILD_SHARED_LIB must be ON.")
 endif()
 
-# Указание заголовочных файлов
-set(OCTET_HEADERS
+# Указание публичных заголовочных файлов
+set(OCTET_PUBLIC_HEADERS
     include/logger.hpp
     include/storage/journal_manager.hpp
     include/storage/storage_manager.hpp
     include/storage/uuid_generator.hpp
+)
+
+# Указание приватных заголовочных файлов
+set(OCTET_PRIVATE_HEADERS
     include/utils/compiler.hpp
     include/utils/file_lock_guard.hpp
     include/utils/file_utils.hpp
 )
 
-# Указание источников
+# Указание исходников
 set(OCTET_SOURCES
     src/logger.cpp
     src/storage/journal_manager.cpp
@@ -73,46 +81,71 @@ set(OCTET_SOURCES
 )
 
 # Для подключения заголовков
-set(OCTET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(OCTET_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 # Наименование для всех библиотек и для исполняемого файла
 set(OCTET_BASENAME "octet")
-
-# Функция для создания библиотеки (динамическая/статическая)
-function(add_octet_library type libname)
-add_library(${libname} ${type} ${OCTET_SOURCES} ${OCTET_HEADERS})
-    set_target_properties(${libname} PROPERTIES OUTPUT_NAME ${OCTET_BASENAME}
-                                                # Настройки для, в основном, Debug-сборки
-                                                LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib
-                                                ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
-    target_link_libraries(${libname} PRIVATE octet_platform)
-    target_include_directories(${libname} PRIVATE ${OCTET_INCLUDE_DIR})
-endfunction(add_octet_library)
+# Директория для установки заголовков
+set(OCTET_INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_INCLUDEDIR}/${OCTET_BASENAME}")
 
 # Создание динамической библиотеки
 if(OCTET_BUILD_SHARED_LIB)
-    add_octet_library(SHARED octet_shared)
+    add_library(octet_shared SHARED
+        ${OCTET_SOURCES}
+        ${OCTET_PUBLIC_HEADERS}
+        ${OCTET_PRIVATE_HEADERS}
+    )
+    add_library(octet::shared ALIAS octet_shared)
+    set_target_properties(octet_shared PROPERTIES
+        OUTPUT_NAME "${OCTET_BASENAME}"
+        VERSION ${PROJECT_VERSION}
+        SOVERSION ${PROJECT_VERSION_MAJOR}
+        EXPORT_NAME "shared"
+    )
+    target_link_libraries(octet_shared PRIVATE octet_platform)
+    target_include_directories(octet_shared
+        PUBLIC
+            $<BUILD_INTERFACE:${OCTET_INCLUDE_DIR}>
+            $<INSTALL_INTERFACE:${OCTET_INSTALL_INCLUDE_DIR}>
+    )
 endif()
 
 # Создание статической библиотеки
 if(OCTET_BUILD_STATIC_LIB)
-    add_octet_library(STATIC octet_static)
+    add_library(octet_static STATIC
+        ${OCTET_SOURCES}
+        ${OCTET_PUBLIC_HEADERS}
+        ${OCTET_PRIVATE_HEADERS}
+    )
+    add_library(octet::static ALIAS octet_static)
+    set_target_properties(octet_static PROPERTIES
+        OUTPUT_NAME "${OCTET_BASENAME}_static"
+        VERSION ${PROJECT_VERSION}
+        EXPORT_NAME "static"
+    )
+    target_link_libraries(octet_static PRIVATE octet_platform)
+    target_include_directories(octet_static
+        PUBLIC
+            $<BUILD_INTERFACE:${OCTET_INCLUDE_DIR}>
+            $<INSTALL_INTERFACE:${OCTET_INSTALL_INCLUDE_DIR}>
+    )
 endif()
 
-# Создаение исполняемого файла
-if(OCTET_BUILD_APP)
-    add_executable(octet app/main.cpp)
-    set_target_properties(octet PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
-    target_include_directories(octet PRIVATE ${OCTET_INCLUDE_DIR})
+# TODO: При разработке CLI расскоментировать
+# # Создаение исполняемого файла
+# if(OCTET_BUILD_APP)
+#     add_executable(octet app/main.cpp)
+#     set_target_properties(octet PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
+#     target_include_directories(octet PRIVATE ${OCTET_INCLUDE_DIR})
 
-    # Динамическая библиотека в приоритете
-    if(OCTET_BUILD_SHARED_LIB)
-        target_link_libraries(octet PRIVATE octet_shared)
-    elseif(OCTET_BUILD_STATIC_LIB)
-        target_link_libraries(octet PRIVATE octet_static)
-    else()
-        message(FATAL_ERROR "Internal error! Can't build application without library.")
-    endif()
-endif()
+#     # Динамическая библиотека в приоритете
+#     if(OCTET_BUILD_SHARED_LIB)
+#         target_link_libraries(octet PRIVATE octet_shared)
+#     elseif(OCTET_BUILD_STATIC_LIB)
+#         target_link_libraries(octet PRIVATE octet_static)
+#     else()
+#         message(FATAL_ERROR "Internal error! Can't build application without library.")
+#     endif()
+# endif()
 
 # Добавление тестов
 if(OCTET_BUILD_TESTS)
@@ -122,51 +155,78 @@ endif()
 # Настройка установки
 include(CMakePackageConfigHelpers)
 
-function(octet_install_library target)
-    install(TARGETS ${target} EXPORT octet_targets
-                              LIBRARY DESTINATION lib
-                              ARCHIVE DESTINATION lib
-                              RUNTIME DESTINATION bin
-                              INCLUDES DESTINATION include)
-endfunction()
+# Устанавливаем главные API заголовки
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/api/octet.hpp"
+    DESTINATION "${OCTET_INSTALL_INCLUDE_DIR}"
+    RENAME "${OCTET_BASENAME}"
+)
+# Устанавливаем публичные заголовки
+foreach(_octet_header IN LISTS OCTET_PUBLIC_HEADERS)
+    get_filename_component(_octet_header_we "${_octet_header}" NAME_WE)
+    # Генерируем небольшой wrapper
+    set(_octet_wrapper "${CMAKE_CURRENT_BINARY_DIR}/generated/${_octet_header_we}")
+    file(WRITE "${_octet_wrapper}"
+        "#pragma once\n#include \"${_octet_header_we}.hpp\"\n")
+    # Устанавливаем реальные заголовочные файлы
+    install(
+        FILES "${CMAKE_CURRENT_SOURCE_DIR}/${_octet_header}"
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/octet"
+    )
+    # Устанавливаем wrapper как заголовок без расширения
+    install(
+        FILES "${_octet_wrapper}"
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/octet"
+        RENAME "${_octet_header_we}"
+    )
+endforeach()
 
+# Устанавливаем библиотеки
+function(octet_install_library TARGET_NAME)
+    install(TARGETS ${TARGET_NAME}
+        EXPORT octet-targets
+        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+        LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+        INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    )
+endfunction()
 if(OCTET_BUILD_SHARED_LIB)
     octet_install_library(octet_shared)
 endif()
-
 if(OCTET_BUILD_STATIC_LIB)
     octet_install_library(octet_static)
 endif()
 
 # Добавляем платформенную библиотеку в экспортируемый набор
-install(TARGETS octet_platform EXPORT octet_targets)
+install(TARGETS octet_platform EXPORT octet-targets)
 
-# Копируем все заголовочные файлы в директорию сборки
-install(DIRECTORY include/ DESTINATION include)
+# Путь к директории с конфигурацией
+set(OCTET_CONFIGURATION_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/${OCTET_BASENAME}")
 
-# Установка экспортируемых таргетов
-install(EXPORT octet_targets
-    FILE octetTargets.cmake
+# Экспорт целей
+install(EXPORT octet-targets
+    FILE "octet-targets.cmake"
     NAMESPACE octet::
-    DESTINATION lib/cmake/octet
+    DESTINATION ${OCTET_CONFIGURATION_DIR}
 )
-set(OCTET_CONFIGURATION_DIR lib/cmake/octet)
 
 # Генерация версии и конфигурационного файла
 write_basic_package_version_file(
-    "${CMAKE_CURRENT_BINARY_DIR}/octetConfigVersion.cmake"
-    VERSION "${octet_VERSION_MAJOR}.${octet_VERSION_MINOR}.${octet_VERSION_PATCH}"
-    COMPATIBILITY AnyNewerVersion
+    "${CMAKE_CURRENT_BINARY_DIR}/octet-config-version.cmake"
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY SameMajorVersion
 )
 
+# Создание конфигурационных файлов
 configure_package_config_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/octetConfig.cmake.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/octetConfig.cmake"
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/octet-config.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/octet-config.cmake"
     INSTALL_DESTINATION ${OCTET_CONFIGURATION_DIR}
 )
 
+# Установка конфигурационных файлов
 install(FILES
-    "${CMAKE_CURRENT_BINARY_DIR}/octetConfig.cmake"
-    "${CMAKE_CURRENT_BINARY_DIR}/octetConfigVersion.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/octet-config.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/octet-config-version.cmake"
     DESTINATION ${OCTET_CONFIGURATION_DIR}
 )
