path for octet: the path specified in the configuration takes priority

--- a/app/server/config.json
+++ b/app/server/config.json
@@ -1,7 +1,7 @@
 {
     "storage_dir": "/tmp/octet/storage",
     "socket_path": "/tmp/octet/octet.sock",
-    "octet_path": "../../build/bin/octet",
+    "octet_path": "",
     "http_addr": ":8080",
     "max_clients": 10
 }
